# Allocator

./: .travis.yml  CMakeLists.txt
src/: dynamic_allocator.h  main.cpp  makefile  simple_queue.h  smart_dynamic_allocator.h  smart_queue.h  static_allocator.h
